--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,8 @@
                 <div class="hidden md:flex space-x-6">
                     <a href="/" class="nav-link py-2">Home</a>
                     <a href="/staff" class="nav-link py-2">Staffs</a>
-                    <a href="/rules" class="nav-link py-2">rules</a>
+                    <a href="/rules" class="nav-link py-2">Rules</a>
+                    <a href="/media" class="nav-link py-2">Medias</a>
                     <a href="/announcements" class="nav-link py-2">Announcements</a>
                 </div>
             </div>
@@ -44,6 +45,7 @@
             <a href="/" class="block nav-link py-2">Home</a>
             <a href="/staff" class="block nav-link py-2">Staffs</a>
             <a href="/rules" class="block nav-link py-2">rules</a>
+            <a href="/media" class="block nav-link py-2">Medias</a>
             <a href="announcements" class="block nav-link py-2">Announcements</a>
         </div>
     </div>
