--- a/views/index.ejs
+++ b/views/index.ejs
@@ -389,6 +389,8 @@
                 </div>
             </div>
         </section>
+
+<%- include("partials/topUsers") %>
         
         
         
